@@ -1,4 +1,4 @@
-#Wed Dec 20 17:32:09 EST 2006
+#Wed Dec 20 18:24:28 EST 2006
 major_version=1.6b
-minor_version=13
+minor_version=14
 app_name=eLife
