@@ -1,3 +1,9 @@
+== Released [attachment:wiki:SoftwareReleases:eLife-1.6b14.zip V1.6b14]   ==
+
+''' CBUS '''
+
+Ensure end of startup will be recognized even if CBUS is not echoing startup strings.
+
 == Released [attachment:wiki:SoftwareReleases:eLife-1.6b13.zip V1.6b13]   ==
 
 ''' CBUS '''
